--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@heroicons/vue": "^2.0.18",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "express-validator": "^7.0.1",
